# Kitsunari

./: .gitignore  LICENSE  README.md  REF!.md  icon.svg.import  install.sh  progress.json  project.godot  pyproject.toml  requirements.txt  reset.sh  setup.py
Assets/Background/: Spritesheet.png.import  Tilemap.png.import
Assets/Misc/Buttons Pack/: AllButtons.png.import
Assets/Player/Cool-dude-with-bow/: Dash.png.import  High Attack.png.import  Idle and running.png.import  Jumping.png.import  Low attack.png.import  Normal Attack.png.import  death.png.import
Assets/Player/Cool-mage-guy/: Attack1.png.import  Attack2.png.import  Death.png.import  Fall.png.import  Hit.png.import  Idle.png.import  Jump.png.import  Run.png.import
Assets/Player/attack/: spritesheet_attack_1x.png.import  spritesheet_attack_2x.png.import  spritesheet_attack_3x.png.import
Assets/Player/crouch/: spritesheet_crouch_1x.png.import  spritesheet_crouch_2x.png.import  spritesheet_crouch_3x.png.import
Assets/Player/death/: spritesheet_death_1x.png.import  spritesheet_death_2x.png.import  spritesheet_death_3x.png.import
Assets/Player/idle/: spritesheet_idle_1x.png.import  spritesheet_idle_2x.png.import  spritesheet_idle_3x.png.import
Assets/Player/jump/: spritesheet_jump_1x.png.import  spritesheet_jump_2x.png.import  spritesheet_jump_3x.png.import
Assets/Player/run/: spritesheet_run_1x.png.import  spritesheet_run_2x.png.import  (+1 more)
Assets/Slime/: slime_die.png.import  slime_idle.png.import  slime_run.png.import
Code/: Global.gd  Global.gd.uid  Player.gd  Player.gd.uid  slime.gd  slime.gd.uid
Credits/: Credits.txt
Scenes/: Player.tscn  Slime.tscn  Testlvl.tscn
docs/: backend v2.md  backend v3.md  backend-v2.0.md  backend-v2.5.md  backend-v3.md  backend.md  fzf.md  utils-v3.0.md
logs/: logger.py
src/: __main__.py
src/backend/: backend_v2.py  backend_v3.py  utils.py  utils_v3.py
src/css/: details_styles.css  episode_styles.css  home_styles.css  search_styles.css
src/ibuki/: __main__.py
src/kitsunari/: __main__.py
src/kitsunari_cli/: cli.py  main.py
src/kitsunari_tui/: app.py  main.py
src/screens/: continue_watching.py  episode_view.py  home.py  search.py
tests/: test_backend.py
(+612 files in other folders)
