[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitsunari"
version = "2.0.0"
description = "Modern Terminal UI for anime streaming"
authors = [{ name="Xeon", email="XeonXE1@proton.me" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "textual>=0.45.0",
    "anipy-api",
    "levenshtein==0.26.1"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kitsunari*"]

[tool.setuptools.package-data]
kitsunari = ["css/*.css"]

[project.scripts]
kit = "kitsunari.__main__:run"