[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Project-Ibuki"
version = "2.1.1"
description = "Modern Terminal UI for anime streaming"
authors = [{ name="Xeon", email="XeonXE1@proton.me" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "textual>=0.45.0",
    "anipy-api",
    "anipy-cli",
    "levenshtein==0.26.1"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ibuki*"]

[tool.setuptools.package-data]
ibuki = ["css/*.css"]

[project.scripts]
ibuki = "ibuki.__main__:run"